<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00C8C8"
    android:padding="20dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="15dp"
        android:text="@string/subject"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/login_edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="10dp"
        android:hint="@string/subject"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit1"
        android:layout_marginTop="10dp"
        android:text="@string/mail_body"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/login_edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:hint="@string/body"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#003BAE"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>