<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account_Request_Queue">

    <EditText
        android:id="@+id/account_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_request_id"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/displaying_for_priority"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_search" />

    <Spinner
        android:id="@+id/account_spinner"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:entries="@array/priorities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account_text"
        app:layout_constraintTop_toBottomOf="@+id/account_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/account_recycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_pending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/account_emptyCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_completed"
        app:layout_constraintTop_toBottomOf="@id/account_spinner">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/background_image"
                android:src="@drawable/icon_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/no_requests_to_show"
                android:textColor="#0091EA"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_pending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#DD2C00"
        android:onClick="onCLickPending"
        android:text="@string/pending"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_completed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_completed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#DD2C00"
        android:onClick="onClickComplete"
        android:text="@string/completed"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_pending" />

</androidx.constraintlayout.widget.ConstraintLayout>