<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestQueue">

    <EditText
        android:id="@+id/searchEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/search_request_id"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/displaying_for_priority"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEdit" />

    <Spinner
        android:id="@+id/recycler_prioritySpin"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:entries="@array/priorities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recycler_priority"
        app:layout_constraintTop_toBottomOf="@id/searchEdit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_request"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_priority" />

    <androidx.cardview.widget.CardView
        android:id="@+id/emptyCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_priority">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/background_image"
                android:src="@drawable/icon_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/no_requests_to_show"
                android:textColor="#0091EA"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>